mystery-electric-box.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <b>🔎 任務說明：</b>扮演科學偵探！將電池、燈泡與下方的「神秘盒子」連接起來。觀察<b>燈泡亮度的變化</b>，推理出每個盒子裡面藏著什麼元件。
             </div>
             <div class="instruction-box">
-                <span class="instruction-title">📖 使用方法 (How to Play)：</span>
+                <span class="instruction-title">📖 使用方法：</span>
                 <ul class="instruction-list">
                     <li class="instruction-item"><span class="instruction-icon">👆</span> <b>加入元件：</b> 點擊按鈕加入電池、燈泡或盒子。</li>
                     <li class="instruction-item"><span class="instruction-icon">🖐️</span> <b>移動：</b> 按住元件拖曳到想要的位置。</li>
