--- a/mystery-electric-box.html
+++ b/mystery-electric-box.html
@@ -70,14 +70,9 @@
                 <b>🔎 任務說明：</b>扮演科學偵探！將電池、燈泡與下方的「神秘盒子」連接起來。觀察<b>燈泡亮度的變化</b>，推理出每個盒子裡面藏著什麼元件。
             </div>
             <div class="instruction-box">
-                <span class="instruction-title">📖 使用方法：</span>
-                <ul class="instruction-list">
-                    <li class="instruction-item"><span class="instruction-icon">👆</span> <b>加入元件：</b> 點擊按鈕加入電池、燈泡或盒子。</li>
-                    <li class="instruction-item"><span class="instruction-icon">🖐️</span> <b>移動：</b> 按住元件拖曳到想要的位置。</li>
-                    <li class="instruction-item"><span class="instruction-icon">🔗</span> <b>連線：</b> 從黑點拉出導線，靠近另一黑點變<b style="color:#27ae60">綠色</b>時放開。</li>
-                    <li class="instruction-item"><span class="instruction-icon">🗑️</span> <b>刪除：</b> 對著元件或導線 <b>點擊兩下 (Double Click)</b> 即可刪除。</li>
-                </ul>
+                 <b>📖 使用方法：</b> <b>加入元件：點擊按鈕加入電池、燈泡或盒子。</b> <b>移動：按住元件拖曳到想要的位置。</b> <b>連線：從黑點拉出導線，靠近另一黑點變<b style="color:#27ae60">綠色</b>時放開。</b> <b>刪除：</b> 對著元件或導線 <b>點擊兩下 (Double Click)即可刪除。</b> 
             </div>
+              <div class="instruction-box">
         </div>
 
         <div id="controls">
