--- a/mystery-electric-box_mobileV2.html
+++ b/mystery-electric-box_mobileV2.html
@@ -79,9 +79,8 @@
         
         <div class="info-panel">
             <div class="intro-text">
-                <b>🕵️‍♂️ 你的任務：</b>利用電池和燈泡，測試下方的「神秘盒子」。<br>
-                觀察<b>燈泡亮度</b>的變化，推理出每個盒子裡面藏著什麼元件。<br>
-                <span style="font-size:0.9em; color:#e67e22;">💡 提示：如果 Box A 接上去不亮，試試看把線反過來接？</span>
+                <b>🕵️‍♂️ 你的任務：</b>測試下方的「神秘盒子」。<br>
+                
             </div>
             <div class="instruction-box">
                 <b>📖 操作指南：</b><br>
