--- a/mystery-electric-box_mobileV3.html
+++ b/mystery-electric-box_mobileV3.html
@@ -164,8 +164,13 @@
 <div class="container">
     <div class="header-section">
         <h1>⚡️ 猜猜神秘電子盒子的身份？</h1>
-        <div class="hint-text">💡 提示：Box A 有正負極！如果接了不亮，試試看交換接線方向？</div>
-    </div>
+                 <div class="instruction-box">
+                <b>📖 操作指南：</b><br>
+                👆 <b>加入：</b>點擊按鈕<br>
+                🖐️ <b>移動：</b>按住拖曳<br>
+                🔗 <b>連線：</b>拉黑點，變<b style="color:#27ae60">綠色</b>時放開<br>
+                🗑️ <b>刪除：</b>快速點兩下
+            </div> 
 
     <!-- 按鈕區 -->
     <div id="controls">
@@ -178,6 +183,7 @@
         <button class="btn-box" onclick="addOrResetComponent('box', 'C')">Box C</button>
         <button class="btn-box" onclick="addOrResetComponent('box', 'D')">Box D</button>
     </div>
+        
 
     <!-- 畫布區 -->
     <div id="canvas-area">
