--- a/mystery-electric-box_mobileV4.html
+++ b/mystery-electric-box_mobileV4.html
@@ -169,7 +169,17 @@
 
 <div class="container">
     <h1>⚡️ 猜猜神秘電子盒子的身份？</h1>
-    
+            <div class="info-panel">
+            <div class="intro-text">
+                <b>🕵️‍♂️ 你的任務：</b>測試下方的「神秘盒子」。<br>
+                
+            </div>
+            <div class="instruction-box">
+                <b>📖 操作指南：</b><br>
+                👆 <b>加入：</b>點擊按鈕   🖐️ <b>移動：</b>按住拖曳 (按住畫布外可捲動頁面)<br>
+                🔗 <b>連線：</b>拉黑點，變<b style="color:#27ae60">綠色</b>時放開   🗑️ <b>刪除：</b>快速點兩下 (Double Tap)
+            </div>
+        </div>
     <div id="dynamic-hint" class="hint-box"></div>
 
     <div id="controls">
