--- a/mystery-electric-box.html
+++ b/mystery-electric-box.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>神秘黑盒子：對照實驗室</title>
+    <title>神秘電子盒</title>
     <style>
         /* 1. 基礎設定 */
         html, body {
@@ -190,11 +190,13 @@
 <body>
 
 <div class="main-container">
-    <h1>⚡️ 神秘黑盒子：對照實驗室</h1>
+    <h1>⚡️ 神秘電子盒</h1>
     <div class="intro">
-        <b>任務：</b>在下方兩個區域分別建立電路。你可以一邊接 <b>Box A</b>，另一邊接 <b>Box B</b>，直接比較燈泡的亮度差異！觀察完畢後，請在下方筆記區記錄你的發現。
-    </div>
-
+<b>您的任務：</b>找出下方「神秘盒子」中元件的真正身份。盒子裡分別裝有：燈泡、電線、電池和空盒。<br>
+<b>操作指南：</b><br>
+加入：點擊按鈕新增元件 ; 移動：按住元件拖曳（在畫布外按住可捲動頁面）<br>
+連線：拖曳黑點，連線變為綠色時放開即可連接 ; 刪除：在元件上快速點兩下 <br>
+透過連接這些神秘電子盒，測試它們的功能，從而推斷它們的真實身份。    </div>
     <!-- 實驗區容器 -->
     <div class="lab-wrapper">
         
