--- a/mystery-electric-box.html
+++ b/mystery-electric-box.html
@@ -194,7 +194,7 @@
     <div class="intro">
 <b>您的任務：</b>找出四個神秘電子盒A、B、C、D的真正身份。盒子裡分別裝有：燈泡、電線、電池和空盒。<br>
 <b>操作指南：</b><br>
-加入：點擊按鈕新增元件 ; 移動：按住物件拖曳（<br>
+加入：點擊按鈕新增元件 ; 移動：按住物件拖曳<br>
 連線：拖曳黑點，連線變為綠色時放開即可連接 ; 刪除：在物件上快速點兩下 <br>
 透過連接這些神秘電子盒，測試它們的功能，從而推斷它們的真實身份。    </div>
     <!-- 實驗區容器 -->
