--- a/mystery-electric-box_r.html
+++ b/mystery-electric-box_r.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>神秘黑盒子：對照實驗室</title>
+    <title>神秘黑盒子</title>
     <style>
         /* 1. 基礎設定 */
         html, body {
@@ -219,10 +219,13 @@
 <body>
 
 <div class="main-container">
-    <h1>⚡️ 神秘黑盒子：對照實驗室</h1>
+    <h1>⚡️ 神秘黑盒子</h1>
     <div class="intro">
-        <b>任務：</b>在下方兩個區域分別建立電路。你可以一邊接 <b>Box A</b>，另一邊接 <b>Box B</b>，直接比較燈泡的亮度差異！觀察完畢後，請在下方筆記區記錄你的發現。
-    </div>
+       <b>您的任務：</b>找出四個神秘電子盒A、B、C、D的真正身份。盒子裡分別裝有：燈泡、電線、電池和空盒。<br>
+<b>操作指南：</b><br>
+加入：點擊按鈕新增物件 ; 移動：按住物件拖曳<br>
+連線：拖曳黑點，連線變為綠色時放開即可連接 ; 刪除：在物件上快速點兩下 <br>
+透過連接這些神秘電子盒，測試它們的功能，從而推斷它們的真正身份。    </div>
 
     <!-- 圖例 -->
     <div class="legend-container">
