--- a/mystery-electric-box_r.html
+++ b/mystery-electric-box_r.html
@@ -270,7 +270,7 @@
     <!-- 實驗區 -->
     <div class="lab-wrapper">
         <div class="circuit-region region-1">
-            <div class="region-title"><b>實驗區 1</b></div>
+            <div class="region-title">實驗區 1</div>
             <div class="controls">
                 <button class="btn-add" onclick="sim1.add('battery')">➕ 電池</button>
                 <button class="btn-add" onclick="sim1.add('bulb')">💡 燈泡</button>
@@ -286,7 +286,7 @@
         </div>
 
         <div class="circuit-region region-2">
-            <div class="region-title"><b>實驗區 2</b></div>
+            <div class="region-title">實驗區 2</div>
             <div class="controls">
                 <button class="btn-add" onclick="sim2.add('battery')">➕ 電池</button>
                 <button class="btn-add" onclick="sim2.add('bulb')">💡 燈泡</button>
