--- a/mystery-electric-box_r.html
+++ b/mystery-electric-box_r.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>神秘黑盒子</title>
+    <title>神秘電子盒</title>
     <style>
         /* 1. 基礎設定 */
         html, body {
@@ -219,7 +219,7 @@
 <body>
 
 <div class="main-container">
-    <h1>⚡️ 神秘黑盒子</h1>
+    <h1>神秘電子盒</h1>
     <div class="intro">
        <b>您的任務：</b>找出四個神秘電子盒A、B、C、D的真正身份。盒子裡分別裝有：燈泡、電線、電池和空盒。<br>
 <b>操作指南：</b><br>
