Update and rename mystery-electric-box_r (1).html to mystery-electric-box_r(1).html

--- a/mystery-electric-box_r(1).html
+++ b/mystery-electric-box_r(1).html
@@ -270,7 +270,7 @@
     <!-- 實驗區 -->
     <div class="lab-wrapper">
         <div class="circuit-region region-1">
-            <div class="region-title">實驗區 1</div>
+            <div class="region-title">實驗區</div>
             <div class="controls">
                 <button class="btn-add" onclick="sim1.add('battery')">➕ 電池</button>
                 <button class="btn-add" onclick="sim1.add('bulb')">💡 燈泡</button>
@@ -285,22 +285,6 @@
             <div class="status-bar" id="status-1">等待操作...</div>
         </div>
 
-        <div class="circuit-region region-2">
-            <div class="region-title">實驗區 2</div>
-            <div class="controls">
-                <button class="btn-add" onclick="sim2.add('battery')">➕ 電池</button>
-                <button class="btn-add" onclick="sim2.add('bulb')">💡 燈泡</button>
-                <button class="btn-clear" onclick="sim2.clear()">🗑️ 清除</button>
-                <div style="flex-basis: 100%"></div>
-                <button class="btn-box-a" onclick="sim2.add('box', 'A')">Box A</button>
-                <button class="btn-box-b" onclick="sim2.add('box', 'B')">Box B</button>
-                <button class="btn-box-c" onclick="sim2.add('box', 'C')">Box C</button>
-                <button class="btn-box-d" onclick="sim2.add('box', 'D')">Box D</button>
-            </div>
-            <canvas id="canvas-2" width="400" height="350"></canvas>
-            <div class="status-bar" id="status-2">等待操作...</div>
-        </div>
-    </div>
 
     <!-- 筆記區 -->
     <div class="quiz-section">
