--- a/water and alcohol paradox.html
+++ b/water and alcohol paradox.html
@@ -165,12 +165,16 @@
             <div class="panel-header">2. Stop and Think</div>
             <div class="content">
                 <div class="quiz-q">
-                    <b>Q1. What is the final volume of the mixture after you mix 50 ml of water with 50 ml of alcohol</b><br>
-                    <input type="radio" name="q1"> More than 100 ml &nbsp; <input type="radio" name="q1"> Equal to 100 ml &nbsp; <input type="radio" name="q1" id="q1c"> Less than 100 ml
+                    <b>Q1. What is the final volume of the mixture after you mix 50 ml of water with 50 ml of alcohol?</b><br>
+                    <input type="radio" name="q1"> More than 100 ml. &nbsp; <input type="radio" name="q1"> Equal to 100 ml. &nbsp; <input type="radio" name="q1" id="q1c"> Less than 100 ml.
                 </div>
                 <div class="quiz-q">
-                    <b>Q2. What is the final mass of the mixture after you mix 50 ml of water with 50 ml of alcohol</b><br>
-                    <input type="radio" name="q2"> Greater than that before the mixing &nbsp; <input type="radio" name="q2" id="q2c"> Remain unchanged &nbsp; <input type="radio" name="q2"> Less than that before the mixing
+                    <b>Q2. What is the final mass of the mixture after you mix 50 ml of water with 50 ml of alcohol?</b><br>
+                    <input type="radio" name="q2"> Greater than that before the mixing. &nbsp; <input type="radio" name="q2" id="q2c"> Remain unchanged. &nbsp; <input type="radio" name="q2"> Less than that before the mixing.
+                </div>
+                <div class="quiz-q">
+                    <b>Q3. What happens to the mixture after the mixing?</b><br>
+                    <input type="radio" name="q3" id="q3c"> The two liquids mixed together. &nbsp; <input type="radio" name="q3"> The two liquids stayed separate and formed two layers, one on top of the other.
                 </div>
                 <div style="margin-top:auto; display: flex; align-items: center; gap: 10px;">
                     <button onclick="checkQuiz()">Check Findings</button>
@@ -294,7 +298,7 @@
     }
 
     function checkQuiz() {
-        const correct = document.getElementById('q1c').checked && document.getElementById('q2c').checked;
+        const correct = document.getElementById('q1c').checked && document.getElementById('q2c').checked && document.getElementById('q3c').checked;
         const msg = document.getElementById('quiz-msg');
         msg.innerText = correct ? "Correct!" : "Try again.";
         msg.style.color = correct ? "green" : "red";
