Update water and alcohol paradox.html

--- a/water and alcohol paradox.html
+++ b/water and alcohol paradox.html
@@ -174,7 +174,7 @@
                 </div>
                 <div class="quiz-q">
                     <b>Q3. What happens to the mixture after the mixing?</b><br>
-                    <input type="radio" name="q3" id="q3c"> The two liquids mixed together. &nbsp; <input type="radio" name="q3"> The two liquids stayed separate and formed two layers, one on top of the other.
+                    <input type="radio" name="q3" id="q3c"> The two liquids mixed together. &nbsp; <input type="radio" name="q3"> The two liquids stayed separate and formed two layers.
                 </div>
                 <div style="margin-top:auto; display: flex; align-items: center; gap: 10px;">
                     <button onclick="checkQuiz()">Check Findings</button>
