Update water and alcohol paradox.html

--- a/water and alcohol paradox.html
+++ b/water and alcohol paradox.html
@@ -245,19 +245,19 @@
     const modelData = {
         1: {
             name: "Model 1: Continuous Liquids",
-            text: "Each liquid is portrayed as a continuous material with no gaps. In working with this model, students see the implications of this assumption: the two separate liquids cohere as a unit and the volume of the combined water/alcohol mixtures equals the sum of the volume of the two parts."
+            text: "In this model, we imagine liquids are like solid bricks with no empty spaces inside. Because there are no gaps, the two liquids cannot sink into each other or overlap."
         },
         2: {
             name: "Model 2: Tightly Packed Particles",
-            text: "Each liquid is portrayed as a grid of tightly packed particles, with essentially no spaces between the particles. When the liquids combine, the particles can push by each other and intermix. However, they remain in the same tight packing and the volumes sum."
+            text: "In this model, we imagine that both liquids are made of tiny particles that are all the same size. These particles are packed tightly together. When you mix the liquids, the particles can slide past each other, but they still stay close together."
         },
         3: {
             name: "Model 3: Loosely Packed Particles of Different Sizes",
-            text: "Each liquid is composed of loosely packed particles of different size. When the two different liquids combine, the particles intermix with some of the smaller water particles fitting in between the larger alcohol particles."
+            text: "In this model, we imagine that each liquid is composed of tiny particles of different size. When you mix the two liquids, the particles can slide past each other and some of the smaller particles fitting in the space between the larger particles."
         },
         4: {
             name: "Model 4: Tightly Packed Particles with Evaporation",
-            text: "This model makes the same assumption about the structure of matter as Model 2 does. It also assumes that some water and alcohol evaporate in the pouring process, to explain the loss of volume."
+            text: "In this model, we imagine that it is same as the Model 2. But in the pouring and mixing process, some water and alcohol evaporate.
         }
     };
 
