Update water and alcohol paradox.html

--- a/water and alcohol paradox.html
+++ b/water and alcohol paradox.html
@@ -257,7 +257,7 @@
         },
         4: {
             name: "Model 4: Tightly Packed Particles with Evaporation",
-            text: "In this model, we imagine that it is same as the Model 2. But in the pouring and mixing process, some water and alcohol evaporate.
+            text: "In this model, we imagine that it is same as the Model 2. But in the pouring and mixing process, some water and alcohol evaporate".
         }
     };
 
