Update water and alcohol paradox_code.html

--- a/water and alcohol paradox_code.html
+++ b/water and alcohol paradox_code.html
@@ -249,7 +249,7 @@
     const modelData = {
         1: {
             name: "Model 1: Continuous Liquids",
-            text: "Each liquid is portrayed as a continuous material with no gaps. In working with this model, students see the implications of this assumption: the two separate liquids cohere as a unit and the volume of the combined water/alcohol mixtures equals the sum of the volume of the two parts."
+            text: "123."
         },
         2: {
             name: "Model 2: Tightly Packed Particles",
