--- a/water and alcohol paradox_code.html
+++ b/water and alcohol paradox_code.html
@@ -165,16 +165,16 @@
             <div class="panel-header">2. Stop and Think</div>
             <div class="content">
                 <div class="quiz-q">
-                    <b>Q1. Volume after mixing vs. Before?</b><br>
-                    <input type="radio" name="q1"> Bigger &nbsp; <input type="radio" name="q1"> Equal &nbsp; <input type="radio" name="q1" id="q1c"> Less (~19ml)
+                    <b>Q1. What is the final volume of the mixture after you mix 50 ml of water with 50 ml of alcohol?</b><br>
+                    <input type="radio" name="q1"> More than 100 ml. &nbsp; <input type="radio" name="q1"> Equal to 100 ml. &nbsp; <input type="radio" name="q1" id="q1c"> Less than 100 ml.
                 </div>
                 <div class="quiz-q">
-                    <b>Q2. Mass after mixing vs. Before?</b><br>
-                    <input type="radio" name="q2"> Heavier &nbsp; <input type="radio" name="q2" id="q2c"> Equal &nbsp; <input type="radio" name="q2"> Lighter
+                    <b>Q2. What is the final mass of the mixture after you mix 50 ml of water with 50 ml of alcohol?</b><br>
+                    <input type="radio" name="q2"> Greater than that before the mixing. &nbsp; <input type="radio" name="q2" id="q2c"> Remain unchanged. &nbsp; <input type="radio" name="q2"> Less than that before the mixing.
                 </div>
                 <div class="quiz-q">
-                    <b>Q3. What happens to the liquids?</b><br>
-                    <input type="radio" name="q3" id="q3c"> They intermix &nbsp; <input type="radio" name="q3"> They stay separated
+                    <b>Q3. What happens to the mixture after the mixing?</b><br>
+                    <input type="radio" name="q3" id="q3c"> The two liquids mixed together. &nbsp; <input type="radio" name="q3"> The two liquids stayed separate and formed two layers.
                 </div>
                 <div style="margin-top:auto; display: flex; align-items: center; gap: 10px;">
                     <button onclick="checkQuiz()">Check Findings</button>
