--- a/water and alcohol paradox_code.html
+++ b/water and alcohol paradox_code.html
@@ -112,8 +112,25 @@
             align-items: center;
             flex-shrink: 0;
         }
-        .model-icon-container { width: 600px; height: 200px; flex-shrink: 0; display: flex; align-items: center; justify-content: center; background: white; border: 1px solid #ddd; }
-        .model-icon-container img { max-width: 100%; max-height: 100%; object-fit: contain; }
+        .model-icon-container { 
+    width: 100%;             /* Matches the width of the description above */
+    height: 250px;           /* Adjust this to your desired rectangular height */
+    margin: 10px 0;          /* Adds some space above and below the box */
+    
+    /* THE CENTERING CODE */
+    display: flex;           
+    justify-content: center; /* Centers horizontally */
+    align-items: center;     /* Centers vertically */
+    
+    background: #ffffff;     /* White background for the box */
+    border: 1px solid #ddd;  /* Light grey border */
+}
+
+.model-icon-container img { 
+    max-width: 100%;         /* Prevents image from being wider than the box */
+    max-height: 100%;        /* Prevents image from being taller than the box */
+    object-fit: contain;     /* Keeps the image aspect ratio correct */
+}
         .model-desc { font-size: 0.85em; line-height: 1.4; color: #333; }
 
         /* Investigation Area aligned with description width */
