--- a/water and alcohol paradox_code.html
+++ b/water and alcohol paradox_code.html
@@ -270,15 +270,15 @@
             text: "In this model, liquids are like solid bricks with no empty spaces inside. Because there are no gaps, the two liquids cannot sink into each other or overlap."
         },
         2: {
-            name: "Model 2: Tightly Packed Particles",
+            name: "Model 2: Tiny Particles of Same Size",
             text: "In this model, both liquids are made of tiny particles that are all the same size. These particles are packed tightly together. When you mix the liquids, the particles can slide past each other, but they still stay close together."
         },
         3: {
-            name: "Model 3: Loosely Packed Particles of Different Sizes",
+            name: "Model 3: Tiny Particles of Same Sizes",
             text: "In this model, each liquid is composed of tiny particles of different size. When you mix the two liquids, the particles can slide past each other and some of the smaller particles fitting in the space between the larger particles."
         },
         4: {
-            name: "Model 4: Tightly Packed Particles with Evaporation",
+            name: "Model 4: Tiny Particles of Same Size with Evaporation",
             text: "In this model, it is the same as the Model 2. But in the pouring and mixing process, some water and alcohol evaporate."
         }
     };
