Update water and alcohol paradox_code.html

--- a/water and alcohol paradox_code.html
+++ b/water and alcohol paradox_code.html
@@ -93,7 +93,7 @@
 
         .quiz-q { margin-bottom: 6px; padding: 8px; background: #f9f9f9; border-radius: 4px; font-size: 0.8em; }
 
-        /* --- Right Column (Models & Investigation) --- */
+        /* --- Right Column (Investigation with Competing Models) --- */
         .tab-bar { display: flex; background: #eee; border-bottom: 1px solid var(--border); flex-shrink: 0;}
         .tab { 
             flex: 1; padding: 10px; text-align: center; cursor: pointer; 
@@ -203,7 +203,7 @@
 
     <!-- RIGHT COLUMN -->
     <div class="panel">
-        <div class="panel-header">3. Models & Investigation</div>
+        <div class="panel-header">3. Investigation with Competing Models</div>
         <div class="tab-bar">
             <div class="tab active" onclick="selectModel(1)">Model 1</div>
             <div class="tab" onclick="selectModel(2)">Model 2</div>
