Update water and alcohol paradox_code.html

--- a/water and alcohol paradox_code.html
+++ b/water and alcohol paradox_code.html
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <div class="comp-frame">
-                    <div class="comp-header">MODEL PREDICTION</div>
+                    <div class="comp-header">MODEL IMPLICATION</div>
                     <div class="comp-img-container">
                         <!-- [LINK LOCATION] Model Prediction Scale Image -->
                         <img id="predict-img" src="model1_predict.png" alt="Prediction">
