Update water and alcohol paradox_code.html

--- a/water and alcohol paradox_code.html
+++ b/water and alcohol paradox_code.html
@@ -225,24 +225,22 @@
             </div>
 
             <!-- Investigation Frames -->
-            <div class="comparison-area">
- <div class="comp-frame">
-    <div class="comp-header">LAB PHENOMENON</div>
-    <div class="comp-img-container">
-        <!-- Added id="lab-obs-img" here -->
-        <img id="lab-obs-img" src="lab_observation1.png" alt="Lab Obs">
+           <!-- Comparison Frames: Side-by-side -->
+<div class="comparison-area">
+    <div class="comp-frame">
+        <div class="comp-header">LAB PHENOMENON</div>
+        <div class="comp-img-container">
+            <!-- Dynamic ID added here -->
+            <img id="lab-obs-img" src="lab_observation1.png" alt="Lab Obs">
+        </div>
+    </div>
+    <div class="comp-frame">
+        <div class="comp-header">MODEL IMPLICATION</div>
+        <div class="comp-img-container">
+            <img id="predict-img" src="model1_predict.png" alt="Prediction">
+        </div>
     </div>
 </div>
-
-                </div>
-                <div class="comp-frame">
-                    <div class="comp-header">MODEL IMPLICATION</div>
-                    <div class="comp-img-container">
-                        <!-- [LINK LOCATION] Model Prediction Scale Image -->
-                        <img id="predict-img" src="model1_predict.png" alt="Prediction">
-                    </div>
-                </div>
-            </div>
 
             <div class="reflection-area">
                 <p style="font-size: 0.75em; font-weight:bold; margin:0;">
