Update water and alcohol paradox_code.html

--- a/water and alcohol paradox_code.html
+++ b/water and alcohol paradox_code.html
@@ -228,14 +228,14 @@
            <!-- Comparison Frames: Side-by-side -->
 <div class="comparison-area">
     <div class="comp-frame">
-        <div class="comp-header">LAB PHENOMENON</div>
+        <div class="comp-header">Model Implications on the Mass before and after the mixing</div>
         <div class="comp-img-container">
             <!-- Dynamic ID added here -->
             <img id="lab-obs-img" src="lab_observation1.png" alt="Lab Obs">
         </div>
     </div>
     <div class="comp-frame">
-        <div class="comp-header">MODEL IMPLICATION</div>
+        <div class="comp-header">Model Implications on the Volume before and after the mixing</div>
         <div class="comp-img-container">
             <img id="predict-img" src="model1_predict.png" alt="Prediction">
         </div>
