Update water and alcohol paradox_code.html

--- a/water and alcohol paradox_code.html
+++ b/water and alcohol paradox_code.html
@@ -134,7 +134,7 @@
         .model-desc { font-size: 0.85em; line-height: 1.4; color: #333; }
 
         /* Investigation Area aligned with description width */
-        .comparison-area { display: flex; gap: 10px; justify-content: stretch; flex-grow: 1; }
+        .comparison-area { display: flex; gap: 10px; justify-content: stretch; flex-grow: 1;height: 250px; flex-shrink: 0;  }
         .comp-frame { 
             flex: 1; border: 1px solid #ddd; border-radius: 4px; 
             text-align: center; background: #fff; display: flex; flex-direction: column;
