--- a/water and alcohol paradox_code.html
+++ b/water and alcohol paradox_code.html
@@ -134,14 +134,14 @@
         .model-desc { font-size: 0.85em; line-height: 1.4; color: #333; }
 
         /* Investigation Area aligned with description width */
-        .comparison-area { display: flex; gap: 10px; justify-content: stretch; flex-grow: 0; height: 200px; flex-shrink: 0;  }
+        .comparison-area { display: flex; gap: 10px; justify-content: stretch; flex-grow: 0; min-height: 200px; height: auto; flex-shrink: 0; }
         .comp-frame { 
             flex: 1; border: 1px solid #ddd; border-radius: 4px; 
             text-align: center; background: #fff; display: flex; flex-direction: column;
         }
         .comp-header { background: #eee; font-size: 0.7em; font-weight: bold; padding: 6px; flex-shrink: 0;}
         .comp-img-container { flex-grow: 1; display: flex; align-items: center; justify-content: center; padding: 10px; }
-        .comp-img-container img { max-width: 100%; max-height: 150 px; object-fit: contain; }
+        .comp-img-container img { max-width: 100%; max-height: 100%; height: auto; object-fit: contain; }
 
         /* Reflection Area */
         .reflection-area { margin-top: 10px; border-top: 1px dashed #ccc; padding-top: 10px; flex-shrink: 0; }
@@ -228,14 +228,14 @@
            <!-- Comparison Frames: Side-by-side -->
 <div class="comparison-area">
     <div class="comp-frame">
-        <div class="comp-header">Model Implications on the MASS before & after the mixing</div>
+        <div class="comp-header">Model Implications on the MASS</div>
         <div class="comp-img-container">
             <!-- Dynamic ID added here -->
             <img id="lab-obs-img" src="lab_observation1.png" alt="Lab Obs">
         </div>
     </div>
     <div class="comp-frame">
-        <div class="comp-header">Model Implications on the VOLUME before & after the mixing</div>
+        <div class="comp-header">Model Implications on the VOLUME</div>
         <div class="comp-img-container">
             <img id="predict-img" src="model1_predict.png" alt="Prediction">
         </div>
